# diagrams

./: README.md  generate_site.py  pyproject.toml  pytest.ini  run_tests.py
.github/: .gitkeep
.github/workflows/: render-diagrams.yml
.kiro/specs/pystructurizr-github-pages/: design.md  requirements.md  tasks.md
scripts/: validate-workflow.py
src/: __init__.py  site_generator.py
src/diagrams/: __init__.py  cache.py  example_system.py  generator.py  utils.py
templates/: base.html  diagram.html  diagrams.html  index.html
tests/: README.md  __init__.py  conftest.py  test_caching.py  test_diagram_generator.py  test_diagram_validation.py  test_end_to_end_workflow.py  test_example_system.py  test_integration.py  test_site_generator.py  test_utils.py
